--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 body{
     font-family: poppins;
-    background-color: rgb(172, 12, 12);
+    background-color: rgb(255, 255, 255);
     /* background: url(school.jpg) no-repeat fixed center center;
     background-size: cover; */
     color: #fff;
@@ -69,11 +69,12 @@ body{
     margin-right:auto;
     margin-left: auto;
  }
-.nav__list li:nth-of-type(1){
-    background-color: rgb(254, 0, 0);
-}
 .contain .menu .nav__list li a:hover{
     background-color: gray;
+}
+.contain .menu .nav__list li a:active{
+    background-color: rgb(80, 6, 252);
+    color: #fff;
 }
 
 .menu ul ul{
@@ -82,15 +83,27 @@ body{
 .menu ul li:hover > ul{
     display: block;
     position: absolute;
-    min-width: 160px;
+    min-width: 180px;
     display: flex;
     flex-wrap: wrap;
+    justify-content: flex-start;
+    align-items: baseline;
     background-color: rgb(0, 0, 0);
     text-align: left;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
   padding: 0;
+  border: none;
 }
+
+.logo1 a{
+    color: white;
+}
+.logo1 a:hover{
+    background: yellow;
+    color: white;
+}
+
 /* Header End */
 
 /* Footer Start */
@@ -125,31 +138,60 @@ footer{
     color: rgb(7, 7, 255);
     padding:5px 0;
     width: fit-content;
+    box-shadow: 5px 5px 18px rgb(172, 164, 164), -5px -5px 18px rgb(172, 164, 164);
 }
-/* Footer Start */
+.icon a:hover{
+   background: blue;
+   color: #fff;
+}
+/* Footer End */
 
 /* Form */
 
 .form1{
     background: #ffffff;
     color: black;
-    box-shadow: 5px 5px 3px rgb(4, 50, 254), -5px -5px 5px rgb(4, 50, 254);
-    width: 70%;
+    box-shadow: 5px 5px 18px rgb(172, 164, 164), -5px -5px 18px rgb(172, 164, 164);
+    max-width: fit-content;
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     margin: auto;
     margin-top: 180px;
-    padding: 20px;
-    text-align: center;
+    padding: 20px 90px;
+    text-align: left;
+}
+@media (max-width:570px){
+    .form1{
+        max-width: 70%;
+    }
+}   
+
+@media (max-width:500px){
+    .flex1:nth-of-type(5) { order: 1;
+    }
+}
+
+@media(min-width:527px) and (max-width:882px){
+    .flex1:nth-of-type(5) { order: 1; }
+}
+
+
+.formcent h2, .formcent p{
+  text-align: center;
 }
 input{
-   width: 300px;
+   max-width: 300px;
    margin: auto;
    padding: 5px 10px;
    border-radius: 50px;
 }
 input:focus{
     background: blue;
+    color: #fff;
+    box-shadow: 0px 5px 18px rgb(0, 0, 0), -0px -5px 18px rgb(4, 50, 254);
+    border: 5px solid yellow;
+    max-width: 400px;
 } 
 
 input:hover{
@@ -158,5 +200,12 @@ input:hover{
 }
 #submit{
     margin: 5px;
+}
+#inputf{
+  position: relative;
+}
+.fa-search{
+    position: relative;
+    top: -50;
 }
 /* Form End */
