--- a/style.css
+++ b/style.css
@@ -160,6 +160,7 @@ footer{
     margin-top: 180px;
     padding: 20px 90px;
     text-align: left;
+    border-radius: 20px;
 }
 @media (max-width:570px){
     .form1{
